Handling BreakingNews Response

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,7 @@ dependencies {
     //Gson
     implementation 'com.google.code.gson:gson:2.8.6'
 
+    //lottie
+    implementation 'com.airbnb.android:lottie:3.6.0'
+
 }
